[gd_scene load_steps=2 format=3 uid="uid://cb3kwjrrcq3fl"]

[ext_resource type="Script" path="res://scenes/UI elements/location_select.gd" id="1_ikx2o"]

[node name="LocationSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ikx2o")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 481.0
offset_bottom = 23.0
text = "Select destination"
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 480.0
offset_bottom = 140.0

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 103.0
offset_bottom = 15.5
grow_vertical = 2
text = "Level 1 start"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -15.5
offset_right = 51.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Level 1 end"

[node name="Button3" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Level 2 start"

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 86.0
offset_right = 479.0
offset_bottom = 226.0

[node name="Button" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 103.0
offset_bottom = 15.5
grow_vertical = 2
text = "Level 2 end"

[node name="Button2" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -15.5
offset_right = 51.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Level 3 start"

[node name="Button3" type="Button" parent="Control2"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Level 3 end"

[node name="Control3" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 167.0
offset_right = 479.0
offset_bottom = 307.0

[node name="Button" type="Button" parent="Control3"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 103.0
offset_bottom = 15.5
grow_vertical = 2
text = "Final level start"

[node name="Button2" type="Button" parent="Control3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -15.5
offset_right = 51.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Final level end"

[node name="Button3" type="Button" parent="Control3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "The tavern"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -31.0
offset_right = 57.0
grow_horizontal = 2
grow_vertical = 0
text = "back to menu"
